Add date and ls actions

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -11,4 +11,16 @@ jobs:
     steps:
       - name: Say hello
         run: | 
-          echo "Hello World!" && date && ls -l
+          echo "Hello World!"
+  date_job:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Run date
+        run: |
+          date
+  directory_job:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Directory content
+        run: |
+          ls -l
