--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,3 +17,7 @@ jobs:
         run: npm install
       - name: Check style
         run: npm run eslint
+      - name: Testing
+        run: npm test
+      - name: Building
+        run: npm build
